--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 <span class="visually-hidden">Menu toggle</span>
               </button>
               <a class="header__logo logo">
-                <img src="assets/img/logo/tbpro.png" alt="TBPro Logo" width="50" height="50">
+                <img src="assets/img/logo/tbpro.png" alt="TBPro Logo" width="" height="29">
               </a>
               <!-- Social-->
               <ul class="header__social social">
