--- a/product/american.html
+++ b/product/american.html
@@ -109,7 +109,7 @@
     <header class="header header--separator __js_fixed-header">
       <div class="header__container container container--size-large">
         <a class="header__logo logo" href="agency-default.html">
-          <img src="../assets/img/logo/tbpro.png" alt="TBPro Logo" width="50" height="50">
+          <img src="../assets/img/logo/tbpro.png" alt="TBPro Logo" width="" height="29">
         </a>
         <div class="header__mobile mobile-canvas">
           <nav class="mobile-canvas__nav navigation">
