--- a/product/american.html
+++ b/product/american.html
@@ -434,8 +434,9 @@
                 </svg>
               </div>
               <div class="single-project__hero-text">
-                Alienum phaedrum torquatos nec eu, detr periculis ex, nihil expetendis in mei. Mei an pericula euripidis hinc partem ei est. Eos ei nisl graecis, vix aperiri consequat an. Eius lorem tincidunt vix at, vel
-                pertinax sensibus id, error epicurei mea et. Mea facilisis urbanitas moderatius id. Vis ei rationibus definiebas.
+                “Where liberty dwells, there is my country.” Thought provoking words from Benjamin Franklin. American Coffee Table Book is a salute to America on her 250th anniversary. 500+ pages covering 101 years of America from 1722 - 1823. This coffee table book serves as flag, coffee table book, history instruction, and so much more.<br>
+                Packed with 30+ essays, letters, and speeches by the founders, and the wisdom of Poor Richard (Ben Franklin) all throughout. This hardcover table book is brought to you by TABLE books pro.<br>
+                Celebrate America in style this year. Give America as a gift to someone you know. Or use it to learn about the United States of America, the land that you love. American Coffee Table Book celebrates the 250th anniversary of this country in a textbook format with high-end luxury table appeal. Put Ben Franklin on your bookshelf as we endeavor to pay tribute to America this year.
               </div>
             </div>
           </div>
@@ -450,27 +451,27 @@
                 <div class="meta__info">
                   <div class="meta__info-item" data-aos="fade-up">
                     <span>
-                      <span class="num">01.</span> Date
+                      <span class="num">01.</span> Dimensions
                     </span>
-                    <span>15 January, 2021</span>
+                    <span>8.25" x 10.75" x 1.18</span>
                   </div>
                   <div class="meta__info-item" data-aos="fade-up">
                     <span>
-                      <span class="num">02.</span> Designer
+                      <span class="num">02.</span> Weight
                     </span>
-                    <span>Paul</span>
+                    <span>3.254 lbs</span>
                   </div>
                   <div class="meta__info-item" data-aos="fade-up">
                     <span>
-                      <span class="num">03.</span> Client
+                      <span class="num">03.</span> Page Count
                     </span>
-                    <span>Themeforest</span>
+                    <span>552 Pages</span>
                   </div>
                   <div class="meta__info-item" data-aos="fade-up">
                     <span>
-                      <span class="num">04.</span> Project type
+                      <span class="num">04.</span> List Price
                     </span>
-                    <span>Photography design</span>
+                    <span>$50.00</span>
                   </div>
                 </div>
               </div>
@@ -480,15 +481,15 @@
             <div class="row services-section__main">
               <div class="col-12 col-xxl-3" data-aos="fade-up">
                 <div class="services-section__text">
-                  Alienum phaedrum torquatos nec eu, detr periculis ex, nihil expetendis in mei. Mei an pericula euripidis hinc partem ei est. Eos ei nisl graecis, vix aperiri consequat an. Eius lorem tincidunt vix at</div>
+                  American Coffee Table Book is available through a number of retailers. Please try to buy from Barnes And Noble if possible, it helps us to ensure proper bestseller list placement during this period.</div>
               </div>
               <div class="col-12 col-xxl-9 services-section__right">
-                <h2 class="services-section__title" data-aos="fade-up">Services</h2>
+                <h2 class="services-section__title" data-aos="fade-up">Where To Buy</h2>
                 <div class="services-section__image">
                   <div class="services-section__menu">
                     <ul class="services-section__list">
                       <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="service-detail.html">Web development<span>
+                        <a class="services-section__link" href="service-detail.html">Barnes & Noble<span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
                             </svg>
@@ -496,7 +497,7 @@
                         </a>
                       </li>
                       <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="service-detail.html">Marketing<span>
+                        <a class="services-section__link" href="service-detail.html">Amazon<span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
                             </svg>
@@ -504,7 +505,7 @@
                         </a>
                       </li>
                       <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="service-detail.html">Graphic design<span>
+                        <a class="services-section__link" href="service-detail.html">Wal-Mart<span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
                             </svg>
@@ -512,7 +513,7 @@
                         </a>
                       </li>
                       <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="service-detail.html">Photography<span>
+                        <a class="services-section__link" href="service-detail.html">Direct<span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
                             </svg>
