--- a/product/american.html
+++ b/product/american.html
@@ -434,9 +434,7 @@
                 </svg>
               </div>
               <div class="single-project__hero-text">
-                “Where liberty dwells, there is my country.” Thought provoking words from Benjamin Franklin. American Coffee Table Book is a salute to America on her 250th anniversary. 500+ pages covering 101 years of America from 1722 - 1823. This coffee table book serves as flag, coffee table book, history instruction, and so much more.<br>
-                Packed with 30+ essays, letters, and speeches by the founders, and the wisdom of Poor Richard (Ben Franklin) all throughout. This hardcover table book is brought to you by TABLE books pro.<br>
-                Celebrate America in style this year. Give America as a gift to someone you know. Or use it to learn about the United States of America, the land that you love. American Coffee Table Book celebrates the 250th anniversary of this country in a textbook format with high-end luxury table appeal. Put Ben Franklin on your bookshelf as we endeavor to pay tribute to America this year.
+                “Where liberty dwells, there is my country.” Thought provoking words from Benjamin Franklin. American Coffee Table Book is a salute to America on her 250th anniversary. 500+ pages covering 101 years of America from 1722 - 1823.
               </div>
             </div>
           </div>
