--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: American Coffee Table Book
         <div class="single-project__container container container--size-large">
           <div class="single-project__hero row">
             <div class="single-project__hero-image col-12 col-md-6 col-lg-7 col-xxl-6">
-              <img src="../assets/img/picture/single-project/5.jpg" width="785" height="747" alt="project photo">
+              <img src="{{ '/assets/img/picture/single-project/5.jpg' | relative_url }}" width="785" height="747" alt="project photo">
             </div>
             <div class="single-project__hero-main col-12 col-md-6 col-lg-5 col-xxl-6 order-md-first">
               <h1 class="single-project__title">
@@ -31,7 +31,7 @@ title: American Coffee Table Book
             <div class="row">
               <div class="col-12 col-lg-4" data-aos="fade-up">
                 <div class="meta__image">
-                  <img src="../assets/img/picture/single-project/1.jpg" alt="">
+                  <img src="{{ '/assets/img/picture/single-project/1.jpg' | relative_url }}" alt="">
                 </div>
               </div>
               <div class="col-12 col-lg-8">
@@ -109,7 +109,7 @@ title: American Coffee Table Book
                       </li>
                     </ul>
                   </div>
-                  <img src="../assets/img/picture/single-project/2.jpg" width="459" height="642" alt="">
+                  <img src="{{ '/assets/img/picture/single-project/2.jpg' | relative_url }}" width="459" height="642" alt="">
                 </div>
               </div>
             </div>
@@ -118,12 +118,12 @@ title: American Coffee Table Book
             <div class="row">
               <div class="col-12 col-md-6">
                 <div class="project-other__image" data-aos="fade-up">
-                  <img src="../assets/img/picture/single-project/3.jpg" alt="">
+                  <img src="{{ '/assets/img/picture/single-project/3.jpg' | relative_url }}" alt="">
                 </div>
               </div>
               <div class="col-12 col-md-6">
                 <div class="project-other__image project-other__image--small" data-aos="fade-up">
-                  <img src="../assets/img/picture/single-project/4.jpg" alt="">
+                  <img src="{{ '/assets/img/picture/single-project/4.jpg' | relative_url }}" alt="">
                   <div class="project-other__text" data-aos="fade-up">Alienum phaedrum torquatos nec eu, detr periculis ex, nihil expetendis in mei. Mei an pericula euripidis hinc partem ei est.</div>
                 </div>
               </div>
