--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ title: American Coffee Table Book
             </div>
           </section>
           <div class="single-project__next" data-aos="fade-up">
-            <a href="#" target="_blank">Next
+            <a href="#" target="_blank">Buy Now
               <svg width="104" height="86">
                 <use xlink:href="#arrow-right"></use>
               </svg>
