--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@ title: American Coffee Table Book
                     <span>
                       <span class="num">01.</span> Dimensions
                     </span>
-                    <span>8.25" x 10.75" x 1.18</span>
+                    <span>8.25" x 10.75" x 1.20"</span>
                   </div>
                   <div class="meta__info-item" data-aos="fade-up">
                     <span>
                       <span class="num">02.</span> Weight
                     </span>
-                    <span>3.254 lbs</span>
+                    <span>3.25 lbs</span>
                   </div>
                   <div class="meta__info-item" data-aos="fade-up">
                     <span>
@@ -58,7 +58,7 @@ title: American Coffee Table Book
                     <span>
                       <span class="num">04.</span> List Price
                     </span>
-                    <span>$50.00</span>
+                    <span>$ 50.00</span>
                   </div>
                 </div>
               </div>
