--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ title: American Coffee Table Book
             </div>
             <div class="single-project__hero-main col-12 col-md-6 col-lg-5 col-xxl-6 order-md-first">
               <h1 class="single-project__title">
-                <span>AMERICAN</span>
-                <span>COFFEE</span>
-                <span>TABLE</span>
+                <span>AMERICAN</span><br>
+                <span>COFFEE</span><br>
+                <span>TABLE</span><br>
                 <span>BOOK</span>
               </h1>
               <div class="single-project__icon">
