--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ title: American Coffee Table Book
               <img src="{{ '/assets/img/picture/single-project/5.jpg' | relative_url }}" width="785" height="747" alt="project photo">
             </div>
             <div class="single-project__hero-main col-12 col-md-6 col-lg-5 col-xxl-6 order-md-first">
-              <h1 class="single-project__title">
-                <span>AMERICAN</span>
-                <span>COFFEE</span>
-                <span>TABLE</span>
-                <span>BOOK</span>
+              <h1 class="single-project__title" style="line-height: 1.2; display: block;">
+                <span style="display: inline-block; width: 50%;">AMERICAN</span>
+                <span style="display: inline-block; width: 50%;">COFFEE</span>
+                <span style="display: inline-block; width: 50%;">TABLE</span>
+                <span style="display: inline-block; width: 50%;">BOOK</span>
               </h1>
               <div class="single-project__icon">
                 <svg width="75" height="75">
