--- a/products/index.html
+++ b/products/index.html
@@ -3,139 +3,4 @@ layout: default
 title: Product Page
 ---
 
-    <main>
-      <article class="single-project">
-        <div class="single-project__container container container--size-large">
-          <div class="single-project__hero row">
-            <div class="single-project__hero-image col-12 col-md-6 col-lg-7 col-xxl-6">
-              <img src="{{ '/assets/img/picture/single-project/5.jpg' | relative_url }}" width="785" height="747" alt="project photo">
-            </div>
-            <div class="single-project__hero-main col-12 col-md-6 col-lg-5 col-xxl-6 order-md-first">
-              <h1 class="single-project__title" style="line-height: 1.2; display: block;">
-                <span style="display: inline-block; width: 50%;">AMERICAN</span>
-                <span style="display: inline-block; width: 50%;">COFFEE</span>
-                <span style="display: inline-block; width: 50%;">TABLE</span>
-                <span style="display: inline-block; width: 50%;">BOOK</span>
-              </h1>
-              <div class="single-project__icon">
-                <svg width="75" height="75">
-                  <use xlink:href="#link-arrow"></use>
-                </svg>
-              </div>
-              <div class="single-project__hero-text">
-                “Where liberty dwells, there is my country.” Thought provoking words from Benjamin Franklin. American Coffee Table Book is a salute to America on her 250th anniversary. 500+ pages covering 101 years of America from 1722 - 1823.
-              </div>
-            </div>
-          </div>
-          <section class="meta">
-            <div class="row">
-              <div class="col-12 col-lg-4" data-aos="fade-up">
-                <div class="meta__image">
-                  <img src="{{ '/assets/img/picture/single-project/1.jpg' | relative_url }}" alt="">
-                </div>
-              </div>
-              <div class="col-12 col-lg-8">
-                <div class="meta__info">
-                  <div class="meta__info-item" data-aos="fade-up">
-                    <span>
-                      <span class="num">01.</span> Dimensions
-                    </span>
-                    <span>8.25" x 10.75" x 1.20"</span>
-                  </div>
-                  <div class="meta__info-item" data-aos="fade-up">
-                    <span>
-                      <span class="num">02.</span> Weight
-                    </span>
-                    <span>3.25 lbs</span>
-                  </div>
-                  <div class="meta__info-item" data-aos="fade-up">
-                    <span>
-                      <span class="num">03.</span> Page Count
-                    </span>
-                    <span>552 Pages</span>
-                  </div>
-                  <div class="meta__info-item" data-aos="fade-up">
-                    <span>
-                      <span class="num">04.</span> List Price
-                    </span>
-                    <span>$ 50.00</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-          <section class="services-section single-project__services">
-            <div class="row services-section__main">
-              <div class="col-12 col-xxl-3" data-aos="fade-up">
-                <div class="services-section__text">
-                  American Coffee Table Book is available through a number of retailers. Please try to buy from Barnes And Noble if possible, it helps us to ensure proper bestseller list placement during this period.</div>
-              </div>
-              <div class="col-12 col-xxl-9 services-section__right">
-                <h2 class="services-section__title" data-aos="fade-up">Where To Buy</h2>
-                <div class="services-section__image">
-                  <div class="services-section__menu">
-                    <ul class="services-section__list">
-                      <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="service-detail.html">Barnes & Noble<span>
-                            <svg width="24" height="23">
-                              <use xlink:href="#link-arrow2"></use>
-                            </svg>
-                          </span>
-                        </a>
-                      </li>
-                      <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="service-detail.html">Amazon<span>
-                            <svg width="24" height="23">
-                              <use xlink:href="#link-arrow2"></use>
-                            </svg>
-                          </span>
-                        </a>
-                      </li>
-                      <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="service-detail.html">Wal-Mart<span>
-                            <svg width="24" height="23">
-                              <use xlink:href="#link-arrow2"></use>
-                            </svg>
-                          </span>
-                        </a>
-                      </li>
-                      <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="service-detail.html">Direct<span>
-                            <svg width="24" height="23">
-                              <use xlink:href="#link-arrow2"></use>
-                            </svg>
-                          </span>
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
-                  <img src="{{ '/assets/img/picture/single-project/2.jpg' | relative_url }}" width="459" height="642" alt="">
-                </div>
-              </div>
-            </div>
-          </section>
-          <section class="project-other">
-            <div class="row">
-              <div class="col-12 col-md-6">
-                <div class="project-other__image" data-aos="fade-up">
-                  <img src="{{ '/assets/img/picture/single-project/3.jpg' | relative_url }}" alt="">
-                </div>
-              </div>
-              <div class="col-12 col-md-6">
-                <div class="project-other__image project-other__image--small" data-aos="fade-up">
-                  <img src="{{ '/assets/img/picture/single-project/4.jpg' | relative_url }}" alt="">
-                  <div class="project-other__text" data-aos="fade-up">Alienum phaedrum torquatos nec eu, detr periculis ex, nihil expetendis in mei. Mei an pericula euripidis hinc partem ei est.</div>
-                </div>
-              </div>
-            </div>
-          </section>
-          <div class="single-project__next" data-aos="fade-up">
-            <a href="#" target="_blank">Buy Now
-              <svg width="104" height="86">
-                <use xlink:href="#arrow-right"></use>
-              </svg>
-            </a>
-          </div>
-        </div>
-      </article>
-    </main>
+Coming Soon
