--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: American Coffee Table Book
 ---
 
+    <div class="leftward-wrapper">
+      <div class="leftward-wrapper__container container container--size-large">
         <main>
           <section class="creative-hero">
             <div class="creative-hero__container">
@@ -287,3 +289,5 @@ title: American Coffee Table Book
             </div>
           </section>
         </main>
+        </div>
+        </div>
