--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: American Coffee Table Book
         <main>
           <section class="creative-hero">
             <div class="creative-hero__container">
-              <!--<div class="creative-hero__main">
+              <div class="creative-hero__main">
                 <h1 class="creative-hero__title">Undertake projects of&nbsp;any complexity</h1>
                 <a class="creative-hero__btn btn" href="#">
                   <span class="btn__text">Join now</span>
@@ -18,7 +18,7 @@ title: American Coffee Table Book
                     </svg>
                   </span>
                 </a>
-              </div>-->
+              </div>
               <div class="creative-hero__image">
                 <img src="{{ '/assets/img/picture/creative/hero-old1.jpg' | relative_url }}" width="1100" height="980" alt="">
               </div>
