--- a/products/american.html
+++ b/products/american.html
@@ -76,7 +76,7 @@ title: American Coffee Table Book
                   <div class="services-section__menu">
                     <ul class="services-section__list">
                       <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="service-detail.html">Barnes & Noble<span>
+                        <a class="services-section__link" href="https://www.barnesandnoble.com/">Barnes & Noble<span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
                             </svg>
@@ -84,7 +84,7 @@ title: American Coffee Table Book
                         </a>
                       </li>
                       <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="service-detail.html">Amazon<span>
+                        <a class="services-section__link" href="https://www.amazon.com/">Amazon<span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
                             </svg>
@@ -92,7 +92,7 @@ title: American Coffee Table Book
                         </a>
                       </li>
                       <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="service-detail.html">Wal-Mart<span>
+                        <a class="services-section__link" href="https://www.walmart.com/">Walmart<span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
                             </svg>
@@ -100,7 +100,7 @@ title: American Coffee Table Book
                         </a>
                       </li>
                       <li class="services-section__item" data-aos="fade-up">
-                        <a class="services-section__link" href="service-detail.html">Direct<span>
+                        <a class="services-section__link" href="https://www.ingramspark.com/">Direct<span>
                             <svg width="24" height="23">
                               <use xlink:href="#link-arrow2"></use>
                             </svg>
@@ -124,13 +124,13 @@ title: American Coffee Table Book
               <div class="col-12 col-md-6">
                 <div class="project-other__image project-other__image--small" data-aos="fade-up">
                   <img src="{{ '/assets/img/picture/single-project/4.jpg' | relative_url }}" alt="">
-                  <div class="project-other__text" data-aos="fade-up">Alienum phaedrum torquatos nec eu, detr periculis ex, nihil expetendis in mei. Mei an pericula euripidis hinc partem ei est.</div>
+                  <div class="project-other__text" data-aos="fade-up">Featuring three-sided edge-printing, American Coffee Table Book is simply the most beautiful way to celebrate America... on your coffee table.</div>
                 </div>
               </div>
             </div>
           </section>
           <div class="single-project__next" data-aos="fade-up">
-            <a href="#" target="_blank">Buy Now
+            <a href="https://www.amazon.com/" target="_blank">Buy Now
               <svg width="104" height="86">
                 <use xlink:href="#arrow-right"></use>
               </svg>
