--- a/products/american.html
+++ b/products/american.html
@@ -40,7 +40,7 @@ title: American Coffee Table Book
                     <span>
                       <span class="num">01.</span> Dimensions
                     </span>
-                    <span>8.25" x 10.75" x 1.20"</span>
+                    <span>8.25" x 10.75"</span>
                   </div>
                   <div class="meta__info-item" data-aos="fade-up">
                     <span>
