--- a/products/american.html
+++ b/products/american.html
@@ -38,25 +38,25 @@ title: American Coffee Table Book
                 <div class="meta__info">
                   <div class="meta__info-item" data-aos="fade-up">
                     <span>
-                      <span class="num">01.</span> Dimensions
+                      <span class="num"></span> Dimensions
                     </span>
                     <span>8.25" x 10.75"</span>
                   </div>
                   <div class="meta__info-item" data-aos="fade-up">
                     <span>
-                      <span class="num">02.</span> Weight
+                      <span class="num"></span> Weight
                     </span>
                     <span>3.25 lbs</span>
                   </div>
                   <div class="meta__info-item" data-aos="fade-up">
                     <span>
-                      <span class="num">03.</span> Page Count
+                      <span class="num"></span> Page Count
                     </span>
                     <span>552 Pages</span>
                   </div>
                   <div class="meta__info-item" data-aos="fade-up">
                     <span>
-                      <span class="num">04.</span> List Price
+                      <span class="num"></span> List Price
                     </span>
                     <span>$ 50.00</span>
                   </div>
