--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@ title: American Coffee Table Book
           <section class="creative-hero">
             <div class="creative-hero__container">
               <div class="creative-hero__main">
-                <h1 class="creative-hero__title">Undertake projects of&nbsp;any complexity</h1>
+                <h1 class="creative-hero__title" style="line-height: 1.1; display: block;">
+                  <span style="display: inline-block; width: 50%;">TABLE</span>
+                  <span style="display: inline-block; width: 50%;">books</span>
+                  <span style="display: inline-block; width: 50%;">pro</span>
+              </h1>
                 <a class="creative-hero__btn btn" href="#">
                   <span class="btn__text">Join now</span>
                   <span class="btn__icon">
