--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: American Coffee Table Book
           <section class="creative-hero">
             <div class="creative-hero__container">
               <div class="creative-hero__main">
-                <h1 class="creative-hero__title" style="line-height: 1.1; display: block;">
+                <h1 class="creative-hero__title" style="line-height: 1.1; display: block; text-align: center;">
                   <span style="display: inline-block; width: 50%;">TABLE</span>
                   <span style="display: inline-block; width: 50%;">books</span>
                   <span style="display: inline-block; width: 50%;">pro</span>
@@ -31,7 +31,7 @@ title: American Coffee Table Book
           <section class="portfolio-section portfolio-section--no-padding">
             <header class="portfolio-section__header row align-items-end">
               <div class="col-8 col-xl-6 offset-xl-2">
-                <h2 class="portfolio-section__title">Latest works</h2>
+                <h2 class="portfolio-section__title">Latest Releases</h2>
               </div>
               <div class="col-4 text-right">
                 <a class="portfolio-section__more arrow-link" href="projects-masonry.html">
