--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@ title: American Coffee Table Book
             <div class="creative-hero__container">
               <div class="creative-hero__main">
                 <h1 class="creative-hero__title" style="line-height: 1.1; display: block; text-align: center;">
-                  <span style="display: inline-block; width: 50%;">TABLE</span>
+                  <!--<span style="display: inline-block; width: 50%;">TABLE</span>
                   <span style="display: inline-block; width: 50%;">books</span>
-                  <span style="display: inline-block; width: 50%;">pro</span>
+                  <span style="display: inline-block; width: 50%;">pro</span>-->
               </h1>
                 <a class="creative-hero__btn btn" href="#">
-                  <span class="btn__text">Join now</span>
+                  <!--<span class="btn__text">Join now</span>
                   <span class="btn__icon">
                     <svg width="19" height="19">
                       <use xlink:href="#link-arrow"></use>
                     </svg>
-                  </span>
+                  </span>-->
                 </a>
               </div>
               <div class="creative-hero__image">
-                <img src="{{ '/assets/img/picture/creative/hero-old1.jpg' | relative_url }}" width="1100" height="980" alt="">
+                <img src="{{ '/assets/img/picture/creative/table-book-logo.png' | relative_url }}" width="800" height="800" alt="">
               </div>
             </div>
           </section>
