--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ title: American Coffee Table Book
                   <span style="display: inline-block; width: 50%;">books</span>
                   <span style="display: inline-block; width: 50%;">pro</span>-->
               </h1>
-                <a class="creative-hero__btn btn" href="#">
-                  <!--<span class="btn__text">Join now</span>
+                <!--<a class="creative-hero__btn btn" href="#">
+                  span class="btn__text">Join now</span>
                   <span class="btn__icon">
                     <svg width="19" height="19">
                       <use xlink:href="#link-arrow"></use>
