--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ title: American Coffee Table Book
             <div class="creative-hero__container">
               <div class="creative-hero__main">
                 <h1 class="creative-hero__title" style="line-height: 1.1; display: block; text-align: center;">
-                  <!--<span style="display: inline-block; width: 50%;">TABLE</span>
+                  <span style="display: inline-block; width: 50%;">TABLE</span>
                   <span style="display: inline-block; width: 50%;">books</span>
-                  <span style="display: inline-block; width: 50%;">pro</span>-->
+                  <span style="display: inline-block; width: 50%;">pro</span>
               </h1>
                 <!--<a class="creative-hero__btn btn" href="#">
                   span class="btn__text">Join now</span>
