--- a/index.html
+++ b/index.html
@@ -27,87 +27,7 @@ title: American Coffee Table Book
                 <img src="{{ '/assets/img/picture/creative/table-book-logo.png' | relative_url }}" width="800" height="800" alt="">
               </div>
             </div>
-          </section>
-          <section class="portfolio-section portfolio-section--no-padding">
-            <header class="portfolio-section__header row align-items-end">
-              <div class="col-8 col-xl-6 offset-xl-2">
-                <h2 class="portfolio-section__title">Latest Releases</h2>
-              </div>
-              <div class="col-4 text-right">
-                <a class="portfolio-section__more arrow-link" href="projects-masonry.html">
-                  <span class="arrow-link__text">View all</span>
-                  <span class="arrow-link__icon">
-                    <svg width="75" height="75">
-                      <use xlink:href="#link-arrow"></use>
-                    </svg>
-                  </span>
-                </a>
-              </div>
-            </header>
-            <ul class="portfolio-section__grid __js_portfolio-section-masonry">
-              <li class="portfolio-section__item __js_masonry-item">
-                <a class="project-preview project-preview--elastic project-preview--vertical" href="single-project.html">
-                  <span class="project-preview__image">
-                    <img src="{{ '/assets/img/picture/common/portfolio-section/1-mobile.jpg' | relative_url }}" alt="Realistic building">
-                  </span>
-                  <span class="project-preview__bottom">
-                    <span class="project-preview__title">Realistic building</span>
-                    <span class="project-preview__icon">
-                      <svg width="24" height="23">
-                        <use xlink:href="#link-arrow2"></use>
-                      </svg>
-                    </span>
-                  </span>
-                </a>
-              </li>
-              <li class="portfolio-section__item __js_masonry-item">
-                <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
-                  <span class="project-preview__image">
-                    <img src="{{ '/assets/img/picture/common/portfolio-section/2.jpg' | relative_url }}" width="531" height="417" alt="Banana">
-                  </span>
-                  <span class="project-preview__bottom">
-                    <span class="project-preview__title">Banana</span>
-                    <span class="project-preview__icon">
-                      <svg width="24" height="23">
-                        <use xlink:href="#link-arrow2"></use>
-                      </svg>
-                    </span>
-                  </span>
-                </a>
-              </li>
-              <li class="portfolio-section__item __js_masonry-item">
-                <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
-                  <span class="project-preview__image">
-                    <img src="{{ '/assets/img/picture/common/portfolio-section/3.jpg' | relative_url }}" width="531" height="417" alt="Abstract lists">
-                  </span>
-                  <span class="project-preview__bottom">
-                    <span class="project-preview__title">Abstract lists</span>
-                    <span class="project-preview__icon">
-                      <svg width="24" height="23">
-                        <use xlink:href="#link-arrow2"></use>
-                      </svg>
-                    </span>
-                  </span>
-                </a>
-              </li>
-              <li class="portfolio-section__item __js_masonry-item  portfolio-section__item--two-thirds">
-                <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
-                  <span class="project-preview__image">
-                    <img src="{{ '/assets/img/picture/common/portfolio-section/4.jpg' | relative_url }}" alt="Green onion">
-                  </span>
-                  <span class="project-preview__bottom">
-                    <span class="project-preview__title">Green onion</span>
-                    <span class="project-preview__icon">
-                      <svg width="24" height="23">
-                        <use xlink:href="#link-arrow2"></use>
-                      </svg>
-                    </span>
-                  </span>
-                </a>
-              </li>
-            </ul>
-          </section>
-          <section class="services-section">
+          <!--<section class="services-section">
             <div class="services-section__container services-section__container--small">
               <h2 class="services-section__title" data-aos="fade-up">Services</h2>
               <div class="services-section__main">
@@ -168,23 +88,23 @@ title: American Coffee Table Book
                 </div>
               </div>
             </div>
-          </section>
+          </section>-->
           <section class="plans-section">
             <div class="plans-section__container">
               <div class="row">
                 <div class="plans-section__item card-price col-12 col-lg-6 col-xl-4" data-aos="fade-up">
                   <div class="card-price__wrapper">
-                    <div class="card-price__plan" data-aos="fade-up">Basic</div>
+                    <div class="card-price__plan" data-aos="fade-up">American Coffee Table Book</div>
                     <div class="card-price__price" data-aos="fade-up">
-                      <sup>$</sup> 29 <span>/ mo</span>
+                      <sup></sup> Available <span> soon</span>
                     </div>
                     <ul class="card-price__list">
-                      <li class="yellow" data-aos="fade-up">Gathered day, years she'd upon, greater.</li>
-                      <li data-aos="fade-up">Kind cattle won't bearing.</li>
-                      <li data-aos="fade-up">own night two above.</li>
+                      <li class="yellow" data-aos="fade-up">8.25" x 10.75"</li>
+                      <li class="yellow" data-aos="fade-up">552 Pages</li>
+                      <li class="yellow" data-aos="fade-up">Made For Americans</li>
                     </ul>
                     <a class="card-price__btn btn" href="#" data-aos="fade-up">
-                      <span class="btn__text">join now</span>
+                      <span class="btn__text">Learn More</span>
                       <span class="btn__icon">
                         <svg width="19" height="19">
                           <use xlink:href="#link-arrow"></use>
@@ -195,38 +115,17 @@ title: American Coffee Table Book
                 </div>
                 <div class="plans-section__item card-price card-price--gradient col-12 col-lg-6 col-xl-4" data-aos="fade-up">
                   <div class="card-price__wrapper">
-                    <div class="card-price__plan" data-aos="fade-up">Standard</div>
+                    <div class="card-price__plan" data-aos="fade-up">Bitcoin Coffee Table Book</div>
                     <div class="card-price__price" data-aos="fade-up">
-                      <sup>$</sup> 39 <span>/ mo</span>
+                      <sup></sup> Available <span> now</span>
                     </div>
                     <ul class="card-price__list">
-                      <li class="yellow" data-aos="fade-up">Gathered day, years she'd upon, greater.</li>
-                      <li class="yellow" data-aos="fade-up">Kind cattle won't bearing.</li>
-                      <li data-aos="fade-up">own night two above.</li>
+                      <li class="yellow" data-aos="fade-up">The Code</li>
+                      <li class="yellow" data-aos="fade-up">The Correspondence</li>
+                      <li data-aos="fade-up">And The Paper that started it all.</li>
                     </ul>
                     <a class="btn--outline card-price__btn card-price__btn--outline btn" href="#" data-aos="fade-up">
-                      <span class="btn__text">join now</span>
-                      <span class="btn__icon">
-                        <svg width="19" height="19">
-                          <use xlink:href="#link-arrow"></use>
-                        </svg>
-                      </span>
-                    </a>
-                  </div>
-                </div>
-                <div class="plans-section__item card-price col-12 col-lg-6 col-xl-4" data-aos="fade-up">
-                  <div class="card-price__wrapper">
-                    <div class="card-price__plan" data-aos="fade-up">Advanced</div>
-                    <div class="card-price__price" data-aos="fade-up">
-                      <sup>$</sup> 49 <span>/ mo</span>
-                    </div>
-                    <ul class="card-price__list">
-                      <li class="yellow" data-aos="fade-up">Gathered day, years she'd upon, greater.</li>
-                      <li class="yellow" data-aos="fade-up">Kind cattle won't bearing.</li>
-                      <li class="yellow" data-aos="fade-up">own night two above.</li>
-                    </ul>
-                    <a class="card-price__btn btn" href="#" data-aos="fade-up">
-                      <span class="btn__text">join now</span>
+                      <span class="btn__text">Buy Now</span>
                       <span class="btn__icon">
                         <svg width="19" height="19">
                           <use xlink:href="#link-arrow"></use>
@@ -240,7 +139,7 @@ title: American Coffee Table Book
           </section>
           <section class="start-project">
             <div class="start-project__container start-project__container--small">
-              <h2 class="start-project__title start-project__title--size-small" data-aos="fade-up">Start A Project?</h2>
+              <h2 class="start-project__title start-project__title--size-small" data-aos="fade-up">Write To Us</h2>
               <div class="start-project__grid">
                 <div class="start-project__discuss discuss-project discuss-project--no-padding">
                   <div class="discuss-project__wrapper" data-aos="fade-up">
